# pgmug

./: .env.development  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yaml  init.sql  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: dev.sh  generate_test_jwt.sh  test_jwt_auth.sh
src/: config.rs  main.rs  oidc.rs  postgres.rs
